Add daily report gemini_report_2025-07-11.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Gemini Reports Initialized</h1>
+
+    <html>
+      <head>
+        <meta http-equiv="refresh" content="0; url=gemini_report_2025-07-11.html" />
+      </head>
+      <body>
+        <p>Redirecting to the latest report... If not redirected, <a href="gemini_report_2025-07-11.html">click here</a>.</p>
+      </body>
+    </html>
+    
